infra/k8s/base/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smartmeal-api
  labels:
    app.kubernetes.io/name: smartmeal-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: smartmeal-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: smartmeal-api
    spec:
      containers:
        - name: smartmeal-api
          image: ghcr.io/tuanvyst/smartmeal/smartmeal-server:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /swagger/v1/swagger.json
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /swagger/v1/swagger.json
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1654
            capabilities:
              drop:
                - ALL
      securityContext:
        runAsNonRoot: true
        fsGroup: 1654
        seccompProfile:
          type: RuntimeDefault
