infra/k8s/base/api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: smartmeal-api
  labels:
    app.kubernetes.io/name: smartmeal-api
spec:
  parentRefs:
    - name: shared-gateway
      namespace: smartmeal
      sectionName: http
  hostnames:
    - api.ocgi.space
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /swagger
      backendRefs:
        - name: smartmeal-api
          port: 80
